Fix menu gaps on small screens.

--- a/src/themes/default/partials/_frames.scss
+++ b/src/themes/default/partials/_frames.scss
@@ -35,8 +35,8 @@ See the LICENSE file or http://opensource.org/licenses/MIT for more information.
                 width: 19px;
                 padding: 0;
                 margin: 0 0 0 1px;
-                background-color: #000;
-                color: #fff;
+                background-color: inherit;
+                color: inherit;
                 text-align: center;
                 padding: 0;
                 font-weight: bold;
